--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
           <p>Show your support by casting your vote of confidence!</p>
         </div>
       </div>
+      
 
       <div class="vote-section">
-        <div class="vote-count">
-          <span class="count" id="voteCount">0</span>
-          <span class="label">Votes of Support</span>
-        </div>
-        <button id="voteBtn" class="vote-btn">
-          <span class="btn-text">Vote Now</span>
-          <span class="btn-success">✓ Voted!</span>
-        </button>
+       <div class="vote-count">
+  <span class="count" id="voteCount">0</span>
+  <span class="label">Votes of Support</span>
+</div>
+<button id="voteBtn" class="vote-btn">
+  <span class="btn-text">Vote Now</span>
+  <span class="btn-success">Voted!</span>
+</button>
         <p class="note">One vote per device. Thank you for your support!</p>
       </div>
     </section>
