--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="hero">
     <div class="banner">
-      <img src="/banner-placeholder.jpg" alt="Campaign Banner" class="banner-img" />
+      <img src="https://raw.githubusercontent.com/barkappssiwan/karanjitsinghbjp/main/images/bannerbjp.jpg" alt="Campaign Banner" class="banner-img" />
       <div class="overlay">
         <div class="container">
           <h1>Karanjit Singh</h1>
