--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main class="container">
     <section class="candidate-card">
       <div class="profile">
-        <img src="/profile-placeholder.jpg" alt="Karanjit Singh" class="profile-img" />
+        <img src="https://raw.githubusercontent.com/barkappssiwan/karanjitsinghbjp/main/images/profilekaran.jpg" alt="Karanjit Singh" class="profile-img" />
         <div class="info">
           <h2>Support Your Leader</h2>
           <p>Show your support by casting your vote of confidence!</p>
