--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="profile">
         <img src="https://raw.githubusercontent.com/barkappssiwan/karanjitsinghbjp/main/images/profilekaran.jpg" alt="Karanjit Singh" class="profile-img" />
         <div class="info">
-          <h2>Support Your Leader</h2>
-          <p>Show your support by casting your vote of confidence!</p>
+          <h2>Support MLA Karanjit Singh</h2>
+          <p>यह Vote Now का बटन दबाएं और अपना BJP के प्रति समर्थन दिखाएँ ❤️.</p>
         </div>
       </div>
       
