--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Karanjit Singh - BJP MLA</title>
+  <title>Support Karanjit Singh - BJP MLA</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Hind:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/1/1e/BJP_flag.svg">
@@ -45,9 +45,9 @@
       </div>
     </section>
 
-    <!-- Politics Quote & NDA News Section -->
+    <!-- Politics Quote & Karanjit Singh News Section -->
     <section class="politics-section">
-      <h2 class="section-title">Politics Quote &amp; Latest NDA News</h2>
+      <h2 class="section-title">Politics Quote &amp; Latest Karanjit Singh News</h2>
       
       <div class="quote-box">
         <blockquote>
@@ -57,7 +57,7 @@
       </div>
 
       <div class="news-container" id="newsContainer">
-        <p class="loading">Loading latest NDA news...</p>
+        <p class="loading">Loading latest Karanjit Singh news...</p>
       </div>
     </section>
   </main>
